# ShareBite

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  docker-compose.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ce7d45f0cd5f_initial_migration.py
backend/app/: deps.py  main.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  donation.py  user.py
backend/app/models/: __init__.py  donation.py  user.py
backend/app/routes/: auth.py  donations.py
backend/app/schemas/: __init__.py  donation.py  user.py
backend/app/utils/: jwt.py  minio_client.py
docs/: api.md
frontend/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/donations/: DonationForm.tsx  DonationsList.tsx
frontend/components/layout/: Header.tsx
frontend/contexts/: AuthContext.tsx
frontend/pages/: browse.tsx  dashboard.tsx  donate.tsx  index.tsx
frontend/pages/api/: donations.ts
frontend/pages/api/auth/: login.ts  logout.ts  me.ts  refresh.ts  register.ts
frontend/styles/: basic.css
